Add probable cause